[package]
name = "memur"
version = "0.2.0"
authors = ["The memur Developers"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Arena storage with bells and whistles."
repository = "https://github.com/Nercury/memur"
keywords = ["arena", "any", "allocator", "memory"]
categories = ["memory-management"]
documentation = "https://docs.rs/memur"

[features]
default = []
logging = ["log"]

[dependencies.log]
version = "0.4"
optional = true

[badges]
travis-ci = { repository = "Nercury/memur" }